test/should-fail/jfxc1901.visage
/*
 * @test/compile-error
 */
import visage.animation.KeyFramexx;
import visage.xxanimation.KeyFrame;
